--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-stack-cards": "^1.0.8",
     "reactstrap": "^9.0.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
